Rounded borders and made each div its respective color.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <title>Task App</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        
+        .row task-row-1 {
+        border-radius: 10px;
+        background-color: red;
+}
+        .row task-row-2 {
+            border-radius: 10px;
+            background-color: yellow;
+        }
+
+        .row task-row-3 {
+            border-radius: 10px;
+            background-color: green;
+        }
     </style>
 </head>
 
