--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <style>
         .row task-row-1 {
         border-radius: 10px;
-        background-color: red;
+        background-color: rgb(255,0,0);
 }
         .row task-row-2 {
             border-radius: 10px;
-            background-color: yellow;
+            background-color: rgb(255,255,0);
         }
 
         .row task-row-3 {
             border-radius: 10px;
-            background-color: green;
+            background-color: rgb(0,128,0);
         }
     </style>
 </head>
