--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <title>Task App</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .row task-row-1 {
+        .row-1 div{
         border-radius: 10px;
         background-color: rgb(255,0,0);
-}
-        .row task-row-2 {
+        }
+        .row-2 div{
             border-radius: 10px;
             background-color: rgb(255,255,0);
         }
-
-        .row task-row-3 {
+        .row-3 div{
             border-radius: 10px;
             background-color: rgb(0,128,0);
         }
@@ -23,15 +22,15 @@
 
 <body>
     <div id="tasks">
-        <div id="task-row-1" class="row">
+        <div id="task-row-1" class="row-1">
             <div id="task-description-1">pack spikes for track meet</div>
             <div id="task-status-1" class="todo task-status">todo</div>
         </div>
-        <div id="task-row-2" class="row">
+        <div id="task-row-2" class="row-2">
             <div id="task-description-2">write draft english paper</div>
             <div id="task-status-2" class="doing task-status">doing</div>
         </div>
-        <div id="task-row-3" class="row">
+        <div id="task-row-3" class="row-3">
             <div id="task-description-3">finish math homework</div>
             <div id="task-status-3" class="done task-status">done</div>
         </div>
